factoty/dom additions+

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="registration.css">
 </head>
 
 <body>
@@ -34,12 +34,13 @@
 
 			</div>
 			<hr>
+			<div class="clearBtn">
+				<button class="clearBtn">Clear</button>
+			</div>
 			<div class="regNumbers">
-				<!-- <i>Reg numbers to be added here...</i> -->
-
-				<div class="regNumber">
-					CA 124-245
-				</div>
+			<ul class="mainList">
+			<div class="showRegistrations" id="showReg"></div>
+			</ul>
 			</div>
 		</div>
 	</div>
