--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 
 			<div class="filter">
-				<strong>Filter by town</strong>
+				<strong>Filter</strong>
 
 				<input type="radio" name="town" value="">Show all
 				<input type="radio" name="town" value="CA"> Cape Town
@@ -44,7 +44,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="reg-number.dom.js"></script>
+	<script src="factory/registration.js"></script>
+	<script src="registration.js"></script>
 </body>
 
 </html>
